prepping for Bonsai Asset

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: ruby
+services:
+- docker
 cache:
 - bundler
 install:
 - bundle install
 rvm:
-- 2.1
-- 2.2
 - 2.3.0
 - 2.4.1
 notifications:
@@ -18,8 +18,10 @@ script:
 - bundle exec rake default
 - gem build sensu-plugins-cpu-checks.gemspec
 - gem install sensu-plugins-cpu-checks-*.gem
+before_deploy:
+- bash -c "[ ! -d bonsai/ ] && git clone https://github.com/sensu/sensu-go-bonsai-asset.git bonsai || echo 'bonsai/ exists, skipping git clone'"
 deploy:
-  provider: rubygems
+- provider: rubygems
   api_key:
     secure: AyvwPx6XOE0hfd09ji2oRonTECC+zh0sVZByRHtCfulKBNKPM5rph96eR6q0QFz9/dqJev7veAThmxGrEaODE4muMk5CdM5VfaR1i8Fc4e7YmuhnMAZxzi9RsBSE/FpPlXVhJ0kd8AP910SVmBixnDyxlC46zatdKToZELv/YF8=
   gem: sensu-plugins-cpu-checks
@@ -28,3 +30,10 @@ deploy:
     all_branches: true
     rvm: 2.4.1
     repo: sensu-plugins/sensu-plugins-cpu-checks
+- provider: script
+  script: bonsai/ruby-runtime/travis-build-ruby-plugin-assets.sh sensu-plugins-cpu-checks
+  skip_cleanup: true
+  on:
+    tags: true
+    all_branches: true
+    rvm: 2.4.1    
